<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobile Kidz</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Top">Large Text</string>
    <string name="home_link">Home</string>
    <string name="friends_link">Friends</string>
    <string name="profile_link">Profile</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_schedule">Schedule</string>

    <string-array name="schedule">
        <item>Sofia March 1, 2015</item>
        <item>Alexa March 8, 2015</item>
        <item>Jayden March 15, 2015</item>
    </string-array>
    <string-array name="friends">
        <item>Sofia</item>
        <item>Alexa</item>
        <item>Jayden</item>
    </string-array>
    <string-array name="friendRequests">
        <item>Corina</item>
        <item>Yadira</item>
        <item>Gabby</item>
    </string-array>
    <string-array name="messages">
        <item>Sofia - Please don\'t forget the blankie!</item>
        <item>Jayden - She can\'t have candy after 9pm.</item>
    </string-array>
    <string-array name="outOfNetworkFriends">
        <item>Corina</item>
        <item>Yadira</item>
        <item>Gabby</item>
    </string-array>

    <string name="title_activity_messages">Messages</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="sign_out_button_name">Sign out</string>
    <string name="revoke_access_button_name">Revoke</string>
    <string name="status_sign_in_required">Sign-in required</string>
    <string name="status_sign_in_error">Error signing in: %s</string>
    <string name="status_loading">Loading…</string>
    <string name="status_signing_in">Signing in with Google+…</string>
    <string name="status_signed_out">Signed out</string>
    <string name="status_revoke_access">Revoked access</string>
    <string name="status_revoke_access_error">Error revoking access: %s</string>
    <string name="signed_in_as">Signed in as %s</string>
    <!-- Used if there was an error loading the signed in user's name. -->
    <string name="unknown_person">Unknown</string>
    <string name="play_services_error">Google Play services is not available. This application will close.</string>
    <string name="close">Close</string>
    <string name="profile_picture">User\'s profile picture.</string>
    <string name="title_activity_friend_requests">FriendRequests</string>
    <string name="title_activity_out_of_net_work_friends">OutOfNetWorkFriends</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_requests">Requests</string>
    <string name="title_activity_make_requests">MakeRequests</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_points">Points</string>
    <string name="title_activity_send_message">SendMessage</string>
    <string name="title_activity_out_babysitting_requests">Outgoing Babysitting Requests</string>
    <string name="title_activity_in_babysitting_requests">Incoming Babysitting Requests</string>

</resources>
