<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Home"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/topSection"
        android:layout_weight="1"
        android:layout_gravity="bottom|left"
        android:background="#405100">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Schedule"
            android:id="@+id/textView2"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#b478aa" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal|left|right|top"
        android:id="@+id/middleSection"
        android:layout_weight="5"
        android:background="#e3f4a3"
        android:paddingLeft="20dp">

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listView" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal|top"
        android:id="@+id/bottomSection"
        android:layout_weight="1"
        android:background="#405100">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/home_link"
            android:id="@+id/textView5"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textColor="#b478aa"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/friends_link"
            android:id="@+id/textView6"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textColor="#b478aa"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/profile_link"
            android:id="@+id/textView7"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="#b478aa"
            android:autoText="false"
            android:singleLine="false"
            android:gravity="center" />

    </LinearLayout>

</LinearLayout >
