<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Home"
    android:orientation="vertical"
    android:background="#e3f4a3">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Mobile"
            android:id="@+id/textView11"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#405100"
            android:textSize="70dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Kidz"
            android:id="@+id/textView12"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#405100"
            android:textSize="70dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Swapping Babysitting Has Never Been Easier!"
            android:id="@+id/textView13"
            android:textSize="30dp"
            android:textStyle="bold|italic"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:padding="2dip"
        android:layout_weight="3">
        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_weight="1"
            android:layout_margin="30dip"
            android:layout_gravity="center_vertical" />

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_out_button_name"
            android:enabled="false"
            android:layout_weight="1"
            android:layout_gravity="center_vertical" />

        <Button
            android:id="@+id/revoke_access_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/revoke_access_button_name"
            android:enabled="false"
            android:layout_weight="1"
            android:layout_gravity="center_vertical" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/sign_in_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dip"
            android:text="@string/status_signed_out" />
        </LinearLayout>


</LinearLayout>
