<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Home">

    <LinearLayout
        android:id="@+id/topSection"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom|left"
        android:layout_weight="1"
        android:background="#405100"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onFriends"
            android:text="List"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#b478aa"
            android:textSize="15sp" />
        />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onHome"
            android:text="Messages"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#b478aa"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onHome"
            android:text="Friend Requests"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#b478aa"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onHome"
            android:text="Out of Network Users"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#b478aa"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/middleSection"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal|left|right|top"
        android:layout_weight="5"
        android:background="#e3f4a3"
        android:orientation="vertical"
        android:paddingLeft="20dp">

        <ListView
            android:id="@+id/messages"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/messages" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomSection"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal|top"
        android:layout_weight="1"
        android:background="#405100"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onHome"
            android:text="@string/home_link"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#b478aa" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onFriends"
            android:text="@string/friends_link"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#b478aa" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autoText="false"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/profile_link"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#b478aa" />

    </LinearLayout>

</LinearLayout>