<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Home">

    <LinearLayout
        android:id="@+id/topSection"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom|left"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#405100"
            android:gravity="center_vertical|center_horizontal"
            android:text="Profile"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#b478aa"
            android:textSize="30sp"
            android:textStyle="bold" />


    </LinearLayout>

    <TableLayout
        android:id="@+id/middleSection"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <TableRow
            android:id="@+id/firstRow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="onMySchedule">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="false"
                android:layout_column="0"
                android:layout_gravity="center_vertical|fill_vertical"
                android:layout_marginLeft="5dp"
                android:layout_row="0"


                android:layout_rowSpan="1"
                android:layout_weight="2"
                android:gravity="center"
                android:singleLine="false"
                android:text="Vivienne Fischer"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#3c0032"
                android:textSize="35sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignWithParentIfMissing="false"
                android:layout_column="1"
                android:layout_gravity="right|fill_vertical"
                android:layout_margin="5dp"
                android:layout_row="0"
                android:layout_weight="1"
                android:clickable="false"
                android:contentDescription="schedule"
                android:src="@drawable/vien" />
        </TableRow>


        <TableRow
            android:id="@+id/secondRow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="false"
                android:layout_column="0"
                android:layout_gravity="center_vertical|fill_vertical"
                android:layout_marginLeft="5dp"
                android:layout_row="0"
                android:layout_rowSpan="1"


                android:layout_weight="2"
                android:gravity="center"
                android:singleLine="false"
                android:text="Children"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#3c0032"
                android:textSize="35sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignWithParentIfMissing="false"
                android:layout_column="1"
                android:layout_gravity="bottom|right|fill_vertical"
                android:layout_margin="5dp"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_weight="1"
                android:clickable="false"
                android:contentDescription="schedule"
                android:src="@drawable/baby" />

        </TableRow>


        <TableRow
            android:id="@+id/thirdRow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true">


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/sign_out_button_name"
                android:textColor="#3c0032" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/bottomSection"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal|top"
        android:layout_weight="1"
        android:background="#405100"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/home_link"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#b478aa" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onFriends"
            android:text="@string/friends_link"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#b478aa" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autoText="false"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/profile_link"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#b478aa" />

    </LinearLayout>

</LinearLayout>
